# plushie-demos

./: .gitignore  README.md
elixir/: README.md
elixir/collab/: .formatter.exs  .gitignore  README.md  mix.exs
elixir/collab/config/: config.exs
elixir/collab/lib/: collab.ex
elixir/collab/test/: collab_test.exs
elixir/crash-test/: .gitignore  README.md  mix.exs
elixir/crash-test/config/: config.exs
elixir/crash-test/lib/: crash_test.ex
elixir/crash-test/test/: test_helper.exs
elixir/gauge-demo/: README.md  mix.exs
elixir/gauge-demo/config/: config.exs
elixir/gauge-demo/lib/: gauge_demo.ex
elixir/gauge-demo/test/: test_helper.exs
elixir/notes/: .gitignore  README.md  mix.exs
elixir/notes/config/: config.exs
elixir/notes/lib/: notes.ex
elixir/plushie_pad/: .formatter.exs  .gitignore  README.md  mix.exs
elixir/plushie_pad/config/: dev.exs
elixir/plushie_pad/lib/: plushie_pad.ex
elixir/plushie_pad/test/: event_log_test.exs  hello_test.exs  pad_test.exs  plushie_pad_test.exs  shared_test.exs  test_helper.exs
elixir/sparkline-dashboard/: README.md  mix.exs
elixir/sparkline-dashboard/config/: config.exs
elixir/sparkline-dashboard/lib/: sparkline_dashboard.ex
gleam/: README.md
gleam/collab/: .gitignore  README.md  gleam.toml  manifest.toml
gleam/collab/src/: plushie_demo_ssh_ffi.erl
gleam/collab/static/: .gitignore  index.html  standalone.html  websocket.html
gleam/crash-lab/: README.md  gleam.toml  manifest.toml
gleam/crash-lab/src/: crash_lab.gleam
gleam/gauge-demo/: .gitignore  README.md  gleam.toml  manifest.toml
gleam/gauge-demo/src/: gauge_demo.gleam
gleam/notes/: .gitignore  README.md  gleam.toml
gleam/notes/src/: notes.gleam
gleam/sparkline-dashboard/: README.md  gleam.toml
gleam/sparkline-dashboard/src/: sparkline_dashboard.gleam
python/: README.md
python/collab/: .gitignore  README.md  preflight  pyproject.toml
python/collab/src/collab_demo/: __init__.py  collab.py  server.py  shared.py  ssh_handler.py  ws_handler.py
python/collab/static/: .gitignore  index.html  websocket.html
python/collab/tests/: conftest.py  test_collab.py  test_integration.py  test_shared.py
python/crash-test/: README.md  preflight  pyproject.toml
python/crash-test/native/crasher/: Cargo.toml
python/crash-test/native/crasher/src/: lib.rs
python/crash-test/src/crash_test/: __init__.py  app.py  crasher.py
python/crash-test/tests/: conftest.py  test_app.py  test_crasher.py
python/data-explorer/: .gitignore  DataExplorer.spec  README.md  build_standalone.sh  preflight  pyproject.toml
python/data-explorer/sample_data/: sample.csv
python/data-explorer/src/data_explorer/: __init__.py  __main__.py  app.py  loader.py  stats.py
python/data-explorer/tests/: conftest.py  test_app.py  test_integration.py  test_loader.py  test_stats.py
python/gauge-demo/: .gitignore  README.md  preflight  pyproject.toml
python/gauge-demo/native/gauge/: Cargo.toml
python/gauge-demo/native/gauge/src/: lib.rs
python/gauge-demo/src/gauge_demo/: __init__.py  app.py  gauge.py
python/gauge-demo/tests/: conftest.py  test_app.py  test_gauge.py
python/sparkline-dashboard/: README.md  preflight  pyproject.toml
python/sparkline-dashboard/native/sparkline/: Cargo.toml
python/sparkline-dashboard/native/sparkline/src/: lib.rs
python/sparkline-dashboard/src/sparkline_dashboard/: __init__.py  app.py  sparkline.py
python/sparkline-dashboard/tests/: conftest.py  test_app.py  test_sparkline.py
ruby/: README.md
ruby/collab/: .gitignore  Gemfile  README.md  Rakefile
ruby/collab/lib/: collab.rb
ruby/collab/public/: index.html  websocket.html
ruby/collab/test/: collab_test.rb  shared_test.rb  test_helper.rb
ruby/crash-lab/: README.md  Rakefile
ruby/gauge-demo/: Gemfile  README.md  Rakefile
ruby/notes/: README.md  Rakefile
ruby/sparkline-dashboard/: .gitignore  README.md  Rakefile
typescript/: README.md
typescript/collab/: .gitignore  README.md  esbuild.browser.mjs  package.json  plushie.extensions.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
typescript/crash-test/: .gitignore  README.md  package.json  plushie.extensions.json  pnpm-lock.yaml
typescript/data-explorer/: README.md  package.json  pnpm-lock.yaml  vitest.config.ts
typescript/gauge-demo/: .gitignore  README.md  package.json  plushie.extensions.json  pnpm-lock.yaml  tsconfig.json
typescript/sparkline-dashboard/: .gitignore  README.md  package.json  plushie.extensions.json  pnpm-lock.yaml  tsconfig.json
(+178 files in other folders)
