[project]
name = "data-explorer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["plushie>=0.1.0", "pandas>=2.0"]

[project.optional-dependencies]
dev = ["pytest", "ruff", "pyright"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "-p", "no:plushie"]

[tool.ruff]
target-version = "py312"

[tool.pyright]
pythonVersion = "3.12"
